name:            aivikasim-gpss
version:         0.1
synopsis:        GPSS-like DSL for AivikaSim
description:
    This package allows defining simulation models in terms of a GPPS-like
    domain specific language, which can be useful if you are going to 
    translate your models from GPSS into AivikaSim, for example, 
    for running the nested [1] or distributed [2] simulation.
    .
    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-branches>
    \[2] <http://www.aivikasoft.com/aivikasim/aivikasim-distributed>
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2012-2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.1

library

    exposed-modules: Simulation.Aivika.GPSS
                     Simulation.Aivika.GPSS.Block
                     Simulation.Aivika.GPSS.Block.Transfer
                     Simulation.Aivika.GPSS.Internal.Block
                     Simulation.Aivika.GPSS.Transact
                     Simulation.Aivika.GPSS.TransactQueueStrategy
                     Simulation.Aivika.Trans.GPSS
                     Simulation.Aivika.Trans.GPSS.Block
                     Simulation.Aivika.Trans.GPSS.Block.Transfer
                     Simulation.Aivika.Trans.GPSS.Internal.Block
                     Simulation.Aivika.Trans.GPSS.Transact
                     Simulation.Aivika.Trans.GPSS.TransactQueueStrategy
                     
    build-depends:   base >= 4.2 && < 6,
                     mtl >= 1.1.0.2,
                     containers >= 0.4.0.0,
                     aivikasim >= 1.0,
                     aivikasim-transformers >= 1.0

    extensions:      MultiParamTypeClasses,
                     TypeFamilies,
                     FlexibleInstances
                     
    ghc-options:     -O2

source-repository head

    type:     git
    location: https://github.com/dsorokin/aivikasim-gpss