name:            aivikasim-gpss
version:         0.1
synopsis:        GPSS-like DSL for AivikaSim
description:
    This package allows defining simulation models in terms of a GPPS-like
    domain specific language, which can be useful if you are going to 
    translate your models from GPSS into AivikaSim, for example, 
    for running the nested [1] or distributed [2] simulation.
    .
    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-branches>
    \[2] <http://www.aivikasoft.com/aivikasim/aivikasim-distributed>
    .
category:        Simulation
license:         AllRightsReserved
license-file:    LICENSE
copyright:       (c) 2012-2017. David Sorokin <david.sorokin@gmail.com>
author:          David Sorokin
maintainer:      David Sorokin <david.sorokin@gmail.com>
homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC == 8.0.1

extra-source-files:  examples/Example2A.hs
                     examples/Example2ATrans.hs
                     examples/Example2B.hs
                     examples/Example2BTrans.hs
                     examples/Example2C.hs
                     examples/Example2CTrans.hs
                     examples/Example2D.hs
                     examples/Example2DTrans.hs
                     examples/Example7-26.hs
                     examples/Example7-26Distributed.hs
                     examples/Example7-26Trans.hs

library

    exposed-modules: Simulation.Aivika.GPSS
                     Simulation.Aivika.GPSS.Block
                     Simulation.Aivika.GPSS.Block.Advance
                     Simulation.Aivika.GPSS.Block.Assemble
                     Simulation.Aivika.GPSS.Block.Assign
                     Simulation.Aivika.GPSS.Block.Depart
                     Simulation.Aivika.GPSS.Block.Enter
                     Simulation.Aivika.GPSS.Block.Gather
                     Simulation.Aivika.GPSS.Block.Generate
                     Simulation.Aivika.GPSS.Block.Leave
                     Simulation.Aivika.GPSS.Block.Link
                     Simulation.Aivika.GPSS.Block.Preempt
                     Simulation.Aivika.GPSS.Block.Priority
                     Simulation.Aivika.GPSS.Block.Queue
                     Simulation.Aivika.GPSS.Block.Release
                     Simulation.Aivika.GPSS.Block.Return
                     Simulation.Aivika.GPSS.Block.Seize
                     Simulation.Aivika.GPSS.Block.Split
                     Simulation.Aivika.GPSS.Block.Terminate
                     Simulation.Aivika.GPSS.Block.Transfer
                     Simulation.Aivika.GPSS.Block.Unlink
                     Simulation.Aivika.GPSS.AssemblySet
                     Simulation.Aivika.GPSS.Facility
                     Simulation.Aivika.GPSS.MatchChain
                     Simulation.Aivika.GPSS.Queue
                     Simulation.Aivika.GPSS.Results
                     Simulation.Aivika.GPSS.Results.Locale
                     Simulation.Aivika.GPSS.Storage
                     Simulation.Aivika.GPSS.Transact
                     Simulation.Aivika.GPSS.TransactQueueStrategy
                     Simulation.Aivika.Trans.GPSS
                     Simulation.Aivika.Trans.GPSS.Block
                     Simulation.Aivika.Trans.GPSS.Block.Advance
                     Simulation.Aivika.Trans.GPSS.Block.Assemble
                     Simulation.Aivika.Trans.GPSS.Block.Assign
                     Simulation.Aivika.Trans.GPSS.Block.Depart
                     Simulation.Aivika.Trans.GPSS.Block.Enter
                     Simulation.Aivika.Trans.GPSS.Block.Gather
                     Simulation.Aivika.Trans.GPSS.Block.Generate
                     Simulation.Aivika.Trans.GPSS.Block.Leave
                     Simulation.Aivika.Trans.GPSS.Block.Link
                     Simulation.Aivika.Trans.GPSS.Block.Preempt
                     Simulation.Aivika.Trans.GPSS.Block.Priority
                     Simulation.Aivika.Trans.GPSS.Block.Queue
                     Simulation.Aivika.Trans.GPSS.Block.Release
                     Simulation.Aivika.Trans.GPSS.Block.Return
                     Simulation.Aivika.Trans.GPSS.Block.Seize
                     Simulation.Aivika.Trans.GPSS.Block.Split
                     Simulation.Aivika.Trans.GPSS.Block.Terminate
                     Simulation.Aivika.Trans.GPSS.Block.Transfer
                     Simulation.Aivika.Trans.GPSS.Block.Unlink
                     Simulation.Aivika.Trans.GPSS.AssemblySet
                     Simulation.Aivika.Trans.GPSS.Facility
                     Simulation.Aivika.Trans.GPSS.MatchChain
                     Simulation.Aivika.Trans.GPSS.Queue
                     Simulation.Aivika.Trans.GPSS.Results
                     Simulation.Aivika.Trans.GPSS.Results.Locale
                     Simulation.Aivika.Trans.GPSS.Storage
                     Simulation.Aivika.Trans.GPSS.Transact
                     Simulation.Aivika.Trans.GPSS.TransactQueueStrategy
                     
    build-depends:   base >= 4.2 && < 6,
                     mtl >= 1.1.0.2,
                     containers >= 0.4.0.0,
                     hashable >= 1.2.0.0,
                     unordered-containers >= 0.1.0.0,
                     aivikasim >= 1.0,
                     aivikasim-transformers >= 1.0

    extensions:      MultiParamTypeClasses,
                     TypeFamilies,
                     FlexibleInstances,
                     FlexibleContexts
                     
    ghc-options:     -O2
    
source-repository head

    type:     git
    location: https://github.com/dsorokin/aivikasim-gpss